--- a/HungHaStore/Views/Cart/Index.cshtml
+++ b/HungHaStore/Views/Cart/Index.cshtml
@@ -80,7 +80,8 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="shoping__cart__btns">
-                    <a href="@Url.Action("Index","Product")" class="primary-btn cart-btn">THÊM SẢN PHẨM</a>
+                    <a href="@Url.Action("Index","Product")" class="btn btn-secondary">THÊM SẢN PHẨM</a>
+                    <a href="@Url.Action("RemoveCart","Cart")" class="btn btn-danger">XÓA SẢN PHẨM</a>
                 </div>
             </div>
             <div class="col-lg-6">
