--- a/HungHaStore/Areas/Admin/Views/AInvoice/Index.cshtml
+++ b/HungHaStore/Areas/Admin/Views/AInvoice/Index.cshtml
@@ -9,32 +9,66 @@
     var currency = System.Globalization.CultureInfo.GetCultureInfo("vi-VN");
 }
 
-<h2>Danh sach hóa đơn</h2>
-<br />
-<table class="table table-striped border">
-    <thead class="thead-dark">
-        <tr>
-            <th>
-                Khách hàng
-            </th>
-            <th>
-                Trạng thái
-            </th>
-            <th>
-                Số tền
-            </th>
-            <th>
-                Thời gian tạo
-            </th>
-            <th></th>
-        </tr>
-    </thead>
+<div class="card">
+    <div class="card-header">
+        <b>DANH SÁCH HÓA ĐƠN</b>
+    </div>
+    <div class="card-body">
+        <form action="@Url.Action("Index")" method="get">
+            <div class="input-group mb-3">
+                <input type="text" class="form-control" name="search" placeholder="Nhập vào tên người nhận hoặc SĐT" value="@ViewBag.search">
+            </div>
+            <div class="input-group mb-3">
+                <input type="text" name="daterange" class="form-control" placeholder="Khoảng thời gian" readonly value="@ViewBag.daterange"/>
+            </div>
+            <div class="form-group">
+                <button type="submit" class="btn btn-success">Tìm kiếm</button>
+                <button type="reset" class="btn btn-secondary">Reset</button>
+            </div>
+        </form>
+        <hr />
+        <table class="table table-striped border">
+            <thead class="thead-dark">
+                <tr>
+                    <th>
+                        Khách hàng
+                    </th>
+                    <th>
+                        Tên người nhận
+                    </th>
+                    <th>
+                        SĐT nhận
+                    </th>
+                    <th>
+                        Địa chỉ nhận
+                    </th>
+                    <th>
+                        Trạng thái
+                    </th>
+                    <th>
+                        Số tền
+                    </th>
+                    <th>
+                        Thời gian tạo
+                    </th>
+                    <th></th>
+                </tr>
+            </thead>
 
-    @foreach (var item in Model)
-    {
+            @foreach (var item in Model)
+            {
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.nguoi_dung.tai_khoan)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.ten_nguoi_nhan)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.sdt_nhan)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.dia_chi_nhan)
             </td>
             <td>
                 @if (item.trang_thai == hoa_don.TRANG_THAI_XU_LY)
@@ -58,12 +92,28 @@
                 <a class="btn btn-danger" href="@Url.Action("Delete","AInvoice",new { id= item.id})" data-confirm="Chắc chắn xóa? Nếu xóa danh mục sẽ xóa tất cả những sản phẩm trong danh mục đó">Xóa</a>
             </td>
         </tr>
-    }
-</table>
-<div class="row pb-5">
-    <div class="col">
-        <div class="pagination justify-content-md-center">
-            @Html.PagedListPager(Model, page => Url.Action("Index", "AProduct", new { page }))
+            }
+        </table>
+        <div class="row pb-5">
+            <div class="col">
+                <div class="pagination justify-content-md-center">
+                    @Html.PagedListPager(Model, page => Url.Action("Index", "AProduct", new { page }))
+                </div>
+            </div>
         </div>
     </div>
 </div>
+<script>
+    $(function () {
+        $('input[name="daterange"]').daterangepicker({
+            opens: 'left',
+            autoUpdateInput: false,
+            locale: {
+                cancelLabel: 'Clear'
+                format: 'YYYY/MM/DD'
+            }
+        }, function (start, end, label) {
+            console.log("A new date selection was made: " + start.format('YYYY-MM-DD') + ' to ' + end.format('YYYY-MM-DD'));
+        });
+    });
+</script>
