--- a/HungHaStore/Content/custom.css
+++ b/HungHaStore/Content/custom.css
@@ -34,4 +34,22 @@ h1, h2, h3, h4, h5, h6 {
     color: white !important;
 }
 
+/* HIDE RADIO */
+[type=radio] {
+    position: absolute;
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+/* IMAGE STYLES */
+[type=radio] + img {
+    cursor: pointer;
+}
+
+/* CHECKED STYLES */
+[type=radio]:checked + img {
+    outline: 2px solid #f00;
+}
+
 
