--- a/HungHaStore/Views/Cart/OrderInfo.cshtml
+++ b/HungHaStore/Views/Cart/OrderInfo.cshtml
@@ -16,11 +16,11 @@
                 <hr />
                 <div class="form-group">
                     <label for="">Tên người nhận</label>
-                    <input type="text" class="form-control" name="ten_nguoi_nhan"  placeholder="Nhập vào tên người nhận" required value="@nguoiDung.ho_ten">
+                    <input type="text" class="form-control" name="ten_nguoi_nhan" placeholder="Nhập vào tên người nhận" required value="@nguoiDung.ho_ten">
                 </div>
                 <div class="form-group">
-                    <label >Số điện thoại người nhận</label>
-                    <input type="text" class="form-control" name="sdt_nhan"  placeholder="Nhập số điện thoại" required value="@nguoiDung.sdt">
+                    <label>Số điện thoại người nhận</label>
+                    <input type="text" class="form-control" name="sdt_nhan" placeholder="Nhập số điện thoại" required value="@nguoiDung.sdt">
                 </div>
                 <div class="form-group">
                     <label>Địa chỉ nhận</label>
@@ -58,6 +58,23 @@
 
                     </tbody>
                 </table>
+                <div class="row p-3">
+                    <div class="col-md-6">
+                        <b>PHƯƠNG THỨC THANH TOÁN</b>
+                    </div>
+                    <div class="col-md-6">
+                        <label>
+                            <input type="radio" name="phuong_thuc" value="@hoa_don.THANH_TOAN_COD" checked >
+                            <img src="~/Assest/img/payment/payment_cod.jpg" style="max-width:200px" title="Ship COD">
+                        </label>
+
+                        <label>
+                            <input type="radio" name="phuong_thuc" value="@hoa_don.THANH_TOAN_ONLINE" >
+                            <img src="~/Assest/img/payment/payment_online.jpg" style="max-width:200px" title="Online">
+                        </label>
+                    </div>
+                </div>
+                <div class="clearfix"></div>
                 <button type="submit" class="btn btn-success pull-right">Đặt hàng</button>
             </form>
 
